snake game commit

--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,14 @@
   </head>
   <body>
     <p>holy cow.</p>
+    <div class="game-board">
+      <div class="game-food"></div>
+    </div>
+    <button class="up">up</button>
+    <button class="down">down</button>
+    <button class="left">left</button>
+    <button class="right">right</button>
+    <button class="pausePlay">Pause / Play</button>
+    <button class="startPlay">start game</button>
   </body>
 </html>
